<resources>
    <string name="app_name">Project_Layout</string>
    <string name="name">Виктория В.В.</string>
    <string name="userData">Лицевой счёт:</string>
    <string name="numOfDocument">№ 282</string>
    <string name="general">Общее</string>
    <string name="prices">Тарифы</string>
    <string name="settings">Настройки</string>
    <string name="active">Активные</string>
    <string name="recommended">Рекомендуемые</string>
</resources>